# neoagent

./: LICENSE  README.md  pyproject.toml  requirements.txt  run_demo.py
configs/: deepspeed_zero3.json  search_tool.yaml  sft_llama3_8b.yaml  synthesis.yaml
data/: seed_neologisms.json  web_corpus.json
neoagent/: __init__.py  agent.py  bm25.py  data.py  evolution_tree.py  llm.py  policy_agent.py  retrieval.py  search_backend.py  search_tool.py  synthesis.py  train_sft.py  trajectory.py  variant_expander.py  variants.py  verification.py
neoagent/eval/: __init__.py  benchmarks.py  run_eval.py  scorer.py
scripts/: 1_build_forest.py  2_synthesize_qa.py  3_generate_trajectories.py  4_train_sft.py  5_evaluate.py  evaluate.py  synthesize.py  train_variant_expander.py
tests/: test_core.py
