[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neoagent"
version = "1.0.0"
description = "Variant-aware retrieval-augmented question answering (NeoAgent)"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
  "pyyaml>=6.0",
  "numpy>=1.24",
  "tqdm>=4.66",
]

[project.optional-dependencies]
teacher = ["openai>=1.30"]
retrieval = ["sentence-transformers>=2.7"]
train = ["torch>=2.1", "transformers>=4.43", "accelerate>=0.30", "deepspeed>=0.14", "datasets>=2.19"]
full = ["openai>=1.30", "sentence-transformers>=2.7", "torch>=2.1", "transformers>=4.43", "accelerate>=0.30", "deepspeed>=0.14", "datasets>=2.19"]

[tool.setuptools.packages.find]
include = ["neoagent*"]
